Refactor: Move getMyFamily endpoint generation to OpenAPI spec
